Spring connection